[tool.poetry]
name = "google-music-duplicates"
version = "0.1.0"
description = "Program for managing duplicates in your google play music library"
authors = ["Joel <no1joel@btinternet.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gmusicapi = "^12.1"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = {version = "^0.12.0", optional = true}
tqdm = "^4.42"

[tool.poetry.dev-dependencies]
mypy = {version = "^0.761.0", allows-prereleases = true}
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = {version = "^2.4", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
